# multi-skill-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  demo_skill_router.py  demo_tool_router.py  main.py  pyproject.toml  requirements.txt  smoke_test.py
core/: contracts.py  graph.py  nodes.py  skill_router.py  tool_router.py  tools.py  workflow.py
docs/plans/: core-architecture-audit-plan.md
domains/: lead_enrichment.py  vendor_risk.py
use_cases/: lead_enrichment.py  vendor_risk.py
use_cases/archive/: lead_enrichment.py  vendor_risk.py
