[project]
name = "multi-skill-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.115.0",
    "fastapi>=0.138.2",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "uvicorn>=0.49.0",
]
